add cache and user selection